--- a/nbs/00_core.ipynb
+++ b/nbs/00_core.ipynb
@@ -34,9 +34,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
-    "def foo(): pass"
+    "#| export\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
