--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -4,83 +4,283 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'cryptosporidium_host_adaptation'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [1]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m#| hide\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mcryptosporidium_host_adaptation\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcore\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;241m*\u001b[39m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'cryptosporidium_host_adaptation'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#| hide\n",
-    "from cryptosporidium_host_adaptation.core import *"
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| hide\n",
+    "from cryptosporidium_host_adaptation.core import *\n",
+    "import matplotlib.pyplot as plt\n",
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# cryptosporidium_host_adaptation\n",
+    "# This guide is best visualized [HERE]\n",
     "\n",
-    "> Analysis of Cryptosporidium parvum isolates from mice and neonatal calves"
+    "[HERE]: https://mtinti.github.io/cryptosporidium_host_adaptation/"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This file will become your README and also the index of your documentation."
+    "# Divergent Pathways: Tracking Cryptosporidium's Host Adaptation"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Developer Guide"
+    "## The Origin: Strain M4"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If you are new to using `nbdev` here are some useful pointers to get you started."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Install cryptosporidium_host_adaptation in Development mode"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "```sh\n",
-    "# make sure cryptosporidium_host_adaptation package is installed in development mode\n",
-    "$ pip install -e .\n",
+    "Our journey begins with a single infected mouse (M4), harboring a Cryptosporidium strain that would become the progenitor of two distinct evolutionary paths. This initial host served as the critical branching point for our experimental design.\n",
     "\n",
-    "# make changes under nbs/ directory\n",
-    "# ...\n",
+    "From this single origin, the parasite's story split into two parallel narratives:\n",
     "\n",
-    "# compile to have changes apply to cryptosporidium_host_adaptation\n",
-    "$ nbdev_prepare\n",
+    "### 🐭 The Murine Passage 🐭\n",
+    "> In this pathway, Cryptosporidium continued its journey through a series of mouse hosts, adapting to the murine environment through sequential passages:\n",
+    "\n",
+    "```\n",
+    "M4 → M5 → M6 → M7\n",
+    "```\n",
+    "\n",
+    "Each passage potentially allowed the parasite to optimize its survival and reproductive strategies within these genetically similar mammalian hosts.\n",
+    "\n",
+    "### 🐄 The Bovine Passage 🐄\n",
+    "> Simultaneously, we challenged the adaptability of the same initial strain by introducing it to an entirely different mammalian lineage - neonatal calves:\n",
+    "\n",
+    "```\n",
+    "M4 → C1 → C2 → C3\n",
+    "```\n",
+    "\n",
+    "This cross-species transmission forced the parasite to navigate a dramatically different physiological environment, potentially driving rapid adaptation.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 🧬 Specialized Variant Calling Strategy 🧬\n",
+    "\n",
+    "The progenitor Cryptosporidium population in mouse M4 wasn't a homogeneous colony, but rather a **diverse mixture of strains**. \n",
+    "\n",
+    ">This discovery fundamentally shaped our analytical approach.\n",
+    "\n",
+    "To capture the true genetic complexity within our samples, we implemented a customized variant calling pipeline:\n",
+    "\n",
+    "```\n",
+    "┌────────────────────────────────┐\n",
+    "│ FREEBAYES VARIANT CALLING      │\n",
+    "├────────────────────────────────┤\n",
+    "│ • Ploidy = 1                   │\n",
+    "│ • --pooled-continuous option   │\n",
+    "└────────────────────────────────┘\n",
+    "```\n",
+    "\n",
+    "Why This Approach Matters?\n",
+    "\n",
+    "1. **Beyond Binary Detection**:\n",
+    "> Traditional presence/absence variant calling would have flattened the rich complexity of our samples, obscuring the very phenomenon we aimed to study.\n",
+    "\n",
+    "3. **Quantitative Insight**:\n",
+    "> By focusing on allele frequencies rather than simple variant calls, will allow us to track subtle shifts in population genetics across hosts.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Variant Analysis: Filtering Strategy\n",
+    "\n",
+    "Our approach employed a strategic sequence of filtering steps, each addressing specific aspects of data quality:\n",
+    "\n",
+    "```\n",
+    "┌─────────────────────────────────────┐\n",
+    "│ THREE-TIER FILTERING STRATEGY       │\n",
+    "├─────────────────────────────────────┤\n",
+    "│ 1. Quality-based Filtering          │\n",
+    "│ 2. Read Depth Optimization          │\n",
+    "│ 3. Variant Type Selection           │\n",
+    "└─────────────────────────────────────┘\n",
     "```"
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "======================================\n",
+      "Starting Variant Filtering Process\n",
+      "======================================\n",
+      "Total variants before filtering: 15901\n",
+      "Stage 1: QUAL filtering: 14087 Variants removed and 1814 variants left\n",
+      "Stage 2: FORMAT/DP filtering, DP >= 30 & DP <= 150: 355 Variants removed and 1459 variants left\n",
+      "Stage 3: After keeping SNPs and indels: 203 Variants removed and 1256 variants left\n"
+     ]
+    }
+   ],
+   "source": [
+    "filter_variants()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Usage"
+    "### Stage 1: Quality-Based Filtering\n",
+    "\n",
+    "```bash\n",
+    "# Eliminate low confidence variant calls\n",
+    "bcftools filter -e 'QUAL < 30' \"$INPUT_VCF\" -o \"$QUAL_FILTERED_VCF\"\n",
+    "```\n",
+    "\n",
+    "**Rationale**: The QUAL score represents the statistical confidence in each variant call. By establishing a minimum threshold of 30:\n",
+    "- We eliminated variants likely to be sequencing errors\n",
+    "- Retained variants with a 99.9% probability of being genuine\n",
+    "\n",
+    "### Stage 2: Read Depth Optimization\n",
+    "\n",
+    "```bash\n",
+    "# Balance between coverage requirements and anomalous amplification\n",
+    "bcftools view -i 'FMT/DP >= 30 & FMT/DP <= 150' \"$QUAL_FILTERED_VCF\" -o \"$DP_FILTERED_VCF\"\n",
+    "```\n",
+    "\n",
+    "**Rationale**: Read depth optimization addressed two critical concerns:\n",
+    "- **Lower bound (DP ≥ 30)**: Ensured sufficient read coverage\n",
+    "- **Upper bound (DP ≤ 150)**: Protected against false positives from regions with anomalous read pileups which often indicate repetitive elements\n",
+    "\n",
+    "\n",
+    "### Stage 3: Variant Type Selection\n",
+    "\n",
+    "```bash\n",
+    "# Focus on  variation subset\n",
+    "bcftools view -v snps,indels \"$DP_FILTERED_VCF\" -o \"$SNP_FILTERED_VCF\"\n",
+    "```\n",
+    "**Rationale**: This final step ensured our analysis focused exclusively on:\n",
+    "\n",
+    "- Single nucleotide polymorphisms (SNPs)\n",
+    "- Small insertions and deletions (indels)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -120,71 +320,21 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Documentation"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Documentation can be found hosted on this GitHub [repository][repo]'s [pages][docs]. Additionally you can find package manager specific guidelines on [conda][conda] and [pypi][pypi] respectively.\n",
-    "\n",
-    "[repo]: https://github.com/mtinti/cryptosporidium_host_adaptation\n",
-    "[docs]: https://mtinti.github.io/cryptosporidium_host_adaptation/\n",
-    "[pypi]: https://pypi.org/project/cryptosporidium_host_adaptation/\n",
-    "[conda]: https://anaconda.org/mtinti/cryptosporidium_host_adaptation"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## How to use"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Fill me in please! Don't forget code examples:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "1+1"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#| hide\n",
+    "import nbdev; nbdev.nbdev_export()"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "python3",
+   "display_name": "delightful_data_analysis",
    "language": "python",
-   "name": "python3"
+   "name": "delightful_data_analysis"
   }
  },
  "nbformat": 4,
