--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -27,15 +27,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# This guide is best visualized:\n",
-    "[https://mtinti.github.io/cryptosporidium_host_adaptation/]\n"
+    "# Divergent Pathways: Tracking Cryptosporidium's Host Adaptation\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Divergent Pathways: Tracking Cryptosporidium's Host Adaptation"
+    "###  [This guide is best visualized here](https://mtinti.github.io/cryptosporidium_host_adaptation/)"
    ]
   },
   {
