--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "Our journey begins with a single infected mouse (M4), harboring a Cryptosporidium strain that would become the progenitor of two distinct evolutionary paths. This initial host served as the critical branching point for our experimental design.\n",
     "\n",
@@ -122,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +224,21 @@
       "step 1: (1256, 16)\n",
       "step 2: (945, 16)\n"
      ]
-    },
+    }
+   ],
+   "source": [
+    "vcf_file = \"../data/filtered_final.vcf\"  \n",
+    "df_vcf = read_vcf(vcf_file)\n",
+    "print(f'step 1: {df_vcf.shape}')\n",
+    "df_vcf=df_vcf[(df_vcf['REF']!='N')]\n",
+    "print(f'step 2: {df_vcf.shape}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
     {
      "data": {
       "text/html": [
@@ -441,26 +457,14 @@
        "4          1:134:83:33,50:33:1084:50:1692:-54.7114,0  "
       ]
      },
-     "execution_count": null,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "vcf_file = \"../data/filtered_final.vcf\"  \n",
-    "df_vcf = read_vcf(vcf_file)\n",
-    "print(f'step 1: {df_vcf.shape}')\n",
-    "df_vcf=df_vcf[(df_vcf['REF']!='N')]\n",
-    "print(f'step 2: {df_vcf.shape}')\n",
     "df_vcf.head()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -585,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -603,9 +607,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "delightful_data_analysis",
+   "display_name": "Python delightful_data_analysis",
    "language": "python",
    "name": "delightful_data_analysis"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
