--- a/nbs/00_core.ipynb
+++ b/nbs/00_core.ipynb
@@ -57,7 +57,14 @@
     "#| export\n",
     "import subprocess\n",
     "import os\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import matplotlib\n",
+    "\n",
+    "from pycirclize import Circos\n",
+    "from pycirclize.parser import Gff\n",
+    "from matplotlib.patches import Patch\n",
+    "from matplotlib.lines import Line2D"
    ]
   },
   {
@@ -212,6 +219,226 @@
     "\n",
     "    return expanded_df"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "\n",
+    "def compute_frequencies(df_counts):\n",
+    "    \"\"\"\n",
+    "    Computes allele frequency (AF = AO / DP) for each sample in the dataset.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # Extract sample names from AO columns\n",
+    "    sample_names = [col.replace(\"AO_\", \"\") for col in df_counts.columns if col.startswith(\"AO_\")]\n",
+    "\n",
+    "    # Create a new DataFrame to store allele frequencies\n",
+    "    df_af = df_counts[['#CHROM', 'POS', 'REF', 'ALT']].copy()\n",
+    "\n",
+    "    for sample in sample_names:\n",
+    "        ao_col = f\"AO_{sample}\"\n",
+    "        dp_col = f\"DP_{sample}\"\n",
+    "        af_col = f\"AF_{sample}\"\n",
+    "        df_af[af_col] = df_counts[ao_col] / df_counts[dp_col] #(df_counts[ro_col] + df_counts[ao_col])\n",
+    "\n",
+    "    return df_af\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "\n",
+    "def mod_hist_legend(ax, title=False):\n",
+    "    \"\"\"\n",
+    "    Creates a cleaner legend for histogram plots by using line elements instead of patches.\n",
+    "    \n",
+    "    Motivation:\n",
+    "    - Default histogram legends show rectangle patches which can be visually distracting\n",
+    "    - This function creates a more elegant legend with simple lines matching histogram edge colors\n",
+    "    - Positions the legend outside the plot to avoid overlapping with data\n",
+    "    \n",
+    "    Parameters:\n",
+    "    -----------\n",
+    "    ax : matplotlib.axes.Axes\n",
+    "        The axes object containing the histogram(s)\n",
+    "    title : str or bool, default=False\n",
+    "        Optional title for the legend. If False, no title is displayed\n",
+    "        \n",
+    "    Returns:\n",
+    "    --------\n",
+    "    None - modifies the axes object in place\n",
+    "    \"\"\"\n",
+    "    # Extract the current handles and labels from the plot\n",
+    "    handles, labels = ax.get_legend_handles_labels()\n",
+    "    \n",
+    "    # Create new line handles that match the edge colors of histogram bars\n",
+    "    # This produces a cleaner, more minimal legend appearance\n",
+    "    new_handles = [matplotlib.lines.Line2D([], [], c=h.get_edgecolor()) for h in handles]\n",
+    "    \n",
+    "    # Create the legend with custom positioning\n",
+    "    # - Places legend outside the plot (to the right) to avoid obscuring the data\n",
+    "    # - Centers the legend vertically for better visual balance\n",
+    "    ax.legend(handles=new_handles, \n",
+    "              labels=labels, \n",
+    "              title=title,\n",
+    "              loc='center left', \n",
+    "              bbox_to_anchor=(1, 0.5))\n",
+    "\n",
+    "\n",
+    "def clean_axes(ax, offset=10):\n",
+    "    \"\"\"\n",
+    "    Customizes a matplotlib axes by removing top and right spines,\n",
+    "    and creating a broken axis effect where x and y axes don't touch.\n",
+    "    \n",
+    "    Parameters:\n",
+    "    -----------\n",
+    "    ax : matplotlib.axes.Axes\n",
+    "        The axes object to customize\n",
+    "    offset : int, default=10\n",
+    "        The amount of offset/gap between the x and y axes in points\n",
+    "        \n",
+    "    Returns:\n",
+    "    --------\n",
+    "    ax : matplotlib.axes.Axes\n",
+    "        The same axes object, modified in place\n",
+    "    \"\"\"\n",
+    "    # Remove the top and right spines\n",
+    "    ax.spines['top'].set_visible(False)\n",
+    "    ax.spines['right'].set_visible(False)\n",
+    "    \n",
+    "    # Make the remaining spines gray for a more subtle look\n",
+    "    ax.spines['left'].set_color('gray')\n",
+    "    ax.spines['bottom'].set_color('gray')\n",
+    "    \n",
+    "    # Create the broken axis effect\n",
+    "    # Move the bottom spine up by offset points\n",
+    "    #ax.spines['bottom'].set_position(('outward', offset))\n",
+    "    \n",
+    "    # Move the left spine right by offset points\n",
+    "    ax.spines['left'].set_position(('outward', offset))\n",
+    "    \n",
+    "    # Return the modified axes\n",
+    "    return ax"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "\n",
+    "def make_circos_plot(data):\n",
+    "    \n",
+    "    seqid2size = {\n",
+    "        'CM000429': 875659,\n",
+    "        'CM000430': 985969,\n",
+    "        'CM000431': 1099352,\n",
+    "        'CM000432': 1104417,\n",
+    "        'CM000433': 1080900,\n",
+    "        'CM000434': 1332857,\n",
+    "        'CM000435': 1278458,\n",
+    "        'CM000436': 1344712\n",
+    "    }\n",
+    "\n",
+    "    color_dict = {'M': 'blue', 'C': 'magenta'}\n",
+    "\n",
+    "    circos = Circos(seqid2size, space=3, start=-83, end=265, endspace=False)\n",
+    "    circos.text(\"C. parvum IowaII\", r=5, size=18, font={'style': 'italic'})\n",
+    "    \n",
+    "    m_samples = ['AF_M7', 'AF_M5', 'AF_M6', 'AF_M4']\n",
+    "    c_samples = ['AF_C3', 'AF_C2', 'AF_C1']\n",
+    "    \n",
+    "    for sector in circos.sectors:\n",
+    "        sector.text(sector.name[-3:])\n",
+    "        \n",
+    "        m_track = sector.add_track((80, 100))\n",
+    "        m_track.xticks_by_interval(200000, show_label=False)\n",
+    "        m_track.axis()\n",
+    "    \n",
+    "        \n",
+    "        c_track = sector.add_track((55, 75))\n",
+    "        c_track.xticks_by_interval(200000, show_label=False)\n",
+    "        c_track.axis()\n",
+    "        \n",
+    "        # Plot scatter points for each sample group\n",
+    "        for sample in m_samples:\n",
+    "            color = color_dict[sample[3]]\n",
+    "            subset = data[(data['#CHROM'] == sector.name) & (data[sample] > 0)]\n",
+    "            m_track.scatter(\n",
+    "                x=subset['POS'].values,\n",
+    "                y=subset[sample].values,\n",
+    "                c=color,\n",
+    "                s=3,\n",
+    "                vmin=0,\n",
+    "                vmax=1,\n",
+    "                alpha=0.3,\n",
+    "            )\n",
+    "        \n",
+    "        \n",
+    "        for sample in c_samples:\n",
+    "            color = color_dict[sample[3]]\n",
+    "            subset = data[(data['#CHROM'] == sector.name) & (data[sample] > 0)]\n",
+    "            c_track.scatter(\n",
+    "                x=subset['POS'].values,\n",
+    "                y=subset[sample].values,\n",
+    "                c=color,\n",
+    "                s=3,\n",
+    "                vmin=0,\n",
+    "                vmax=1,\n",
+    "                alpha=0.3,\n",
+    "            )\n",
+    "\n",
+    "        \n",
+    "        # Optional: Add labels \n",
+    "        if sector.name == 'CM000429':\n",
+    "            m_track.yticks([0, 1], [\"0\", \"1\"], side=\"left\")\n",
+    "            c_track.yticks([0, 1], [\"0\", \"1\"], side=\"left\")\n",
+    "\n",
+    "            \n",
+    "            circos.text(\"Cow\", r=c_track.r_center, deg=-90, color=\"magenta\")\n",
+    "            circos.text(\"Mouse\", r=m_track.r_center, deg=-90, color=\"blue\")\n",
+    "    \n",
+    "    circos.plotfig()\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
