--- a/nbs/00_core.ipynb
+++ b/nbs/00_core.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# core\n",
     "\n",
-    "> Fill in a module description here"
+    "> Helper Functions for the analysis"
    ]
   },
   {
