--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -926,7 +926,7 @@
    "source": [
     "# 🔬 Focusing on Single Nucleotide Variants\n",
     "\n",
-    "> To gain deeper insight into the evolutionary dynamics of our Cryptosporidium populations, we narrowed our analysis to focus specifically on Single Nucleotide Variants (SNVs)—the most abundant and interpretable form of genetic variation.\n",
+    "> To gain deeper insight into the evolutionary dynamics of our Cryptosporidium populations, we narrowed our analysis to focus specifically on Single Nucleotide Variants (SNVs).\n",
     "\n",
     "\n",
     "```python\n",
