--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -1062,6 +1062,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## From SNVs to INDELs: Exploring Different Variant Dynamics\n",
+    "\n",
+    "> While our overall frequency analysis revealed peaks near 0 and 1 across all variants, SNVs are predominantly clustered at higher frequencies (>0.4). This observation raises an important question: what's happening with INDELs to create this contrast? To understand this difference, we next focused specifically on INDEL frequency distributions, which might reveal distinct evolutionary dynamics for these structural variants compared to point mutations."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# 🔬 Focusing on INDELS\n",
     "> Having established clear evolutionary patterns through SNV analysis, we extended our investigation to insertions and deletions (INDELs) using the same strategy"
    ]
