change circos palette

--- a/nbs/00_core.ipynb
+++ b/nbs/00_core.ipynb
@@ -801,7 +801,7 @@
     "        'CM000436': 1344712\n",
     "    }\n",
     "\n",
-    "    color_dict = {'M': 'blue', 'C': 'magenta'}\n",
+    "    color_dict = {'M': 'green', 'C': 'blue'}\n",
     "\n",
     "    circos = Circos(seqid2size, space=3, start=-83, end=265, endspace=False)\n",
     "    circos.text(\"C. parvum IowaII\", r=5, size=18, font={'style': 'italic'})\n",
@@ -856,11 +856,12 @@
     "            c_track.yticks([0, 1], [\"0\", \"1\"], side=\"left\")\n",
     "\n",
     "            \n",
-    "            circos.text(\"Cow\", r=c_track.r_center, deg=-90, color=\"magenta\")\n",
-    "            circos.text(\"Mouse\", r=m_track.r_center, deg=-90, color=\"blue\")\n",
+    "            circos.text(\"Cow\", r=c_track.r_center, deg=-90, color=\"blue\")\n",
+    "            circos.text(\"Mouse\", r=m_track.r_center, deg=-90, color=\"green\")\n",
     "    \n",
     "    circos.plotfig()\n",
-    "    "
+    "    circos.savefig('../data/Circos.svg')\n",
+    "    circos.savefig('../data/Circos.png')"
    ]
   },
   {
@@ -911,9 +912,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "python3",
+   "display_name": "delightful_data_analysis",
    "language": "python",
-   "name": "python3"
+   "name": "delightful_data_analysis"
   }
  },
  "nbformat": 4,
